--- a/WebApplication46/2016-04-11/styles/choklad.css
+++ b/WebApplication46/2016-04-11/styles/choklad.css
@@ -1,20 +1,54 @@
-﻿body {
+﻿header, section, footer, aside, nav, article, figure, figcaption{
+    display:block;
+}
+
+body {
     color: #666; /*grå text*/
     background-color: #fefefe; /*ljusgrå bakgrund*/
     background-image: url('../images/Drippel.PNG');
     /*background-position: center;*/
     background-repeat: repeat-x;
-    background-repeat: no-repeat; 
-    background-size: 100%;  /*varning för layoutfel*/
+    background-repeat: no-repeat;
+    background-size: 100%; /*varning för layoutfel*/
     background-size: 600px; /*täcker 600px bredd*/
     font-family: Georgia,'Times New Roman', serif;
     line-height: 1.4em; /*radavstånd*/
     margin: 0;
 }
-#wrapper{ /*det id som kapslar in hela body*/
-    width:900px;
+
+#wrapper { /*det id som kapslar in hela body*/
+    width: 900px;
     margin: 20px auto 20px auto;
     margin: 20px auto; /*samma som raden ovanför*/
     /*margin: 3px; sätter alla samtidigt*/
-    background-color:#401201; /*chokladbrun*/
+    background-color: #401201; /*chokladbrun*/
+}
+
+header {
+    height: 150px;
+    background-image: url('../images/logo.png');
+    border-bottom-left-radius: 40px 20px;
+}
+h1{
+    text-indent:-9999px;
+    width:900px;
+    height:150px;
+    margin:0;
+}
+
+nav, footer{
+    clear:both;
+    color: magenta;
+    background-color: #592202;
+    height: 30px;
+}
+nav ul{
+    margin:0;
+    padding: 5px 0; /*uppe/nere samt höger/vänster*/
+    padding: 5px 0 5px 0; /*Klockmodellen ger uppe,höger, nere, vänster*/
+    /*detta blir mellanrummen på ul-boxen*/
+}
+nav ul li{
+    display: inline; /*gör att elementen hamnar efter varandra*/
+    margin-right: 50px; /*skapar ett mellanrum mellan li-elemenen*/
 }
