--- a/WebApplication46/2016-04-11/styles/choklad.css
+++ b/WebApplication46/2016-04-11/styles/choklad.css
@@ -36,15 +36,49 @@ h1 {
     height: 150px;
     margin: 0;
 }
-article{
-    clear:both;
-    width:100%;
+
+article {
+    clear: both;
+    width: 100%;
 }
-figure{ /*bilderna inklusive text*/
-        width: 235px;
-        height:200px;
-        float:left;
+
+figure { /*bilderna inklusive text*/
+    width: 235px;
+    height: 200px;
+    float: left;
+    padding: 5px;
+    border: 6px solid #eee;
+    background-color: #d98c71;
+    border-radius: 15px;
 }
+
+section.courses {
+    float: left;
+    width: 640px;
+    border-right: 1px solid white;
+    padding-right: 20px;
+}
+
+figcaption {
+    font-size: 0.9rem;
+    text-align: right;
+}
+
+aside {
+    width: 200px;
+    float: left;
+    padding: 0 0 0 20px;
+}
+
+    aside section a {
+        display: block;
+        padding: 10px;
+        border-bottom: 1px solid white;
+    }
+        aside section a:hover {
+            color: hotpink;
+        }
+
 nav, footer {
     clear: both;
     color: magenta;
@@ -66,5 +100,9 @@ nav, footer {
         }
 
             nav ul li a { /*alla a som ligger i en li som ligger i en ul som ligger i en nav*/
-                color: #000;
+                color: #FFF;
             }
+
+                nav ul li a:hover {
+                    color: #666;
+                }
